# qml-module-version-example-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
com/github/siexp.1/: MyButton.1.0.qml  MyRectangle.1.0.qml  qmldir
com/github/siexp.2/: MyButton.2.0.qml  MyCircle.2.0.qml  MyCircle.2.1.qml  qmldir
